fixed bug in first team member not showing up

--- a/src/style/team-members.css
+++ b/src/style/team-members.css
@@ -17,29 +17,37 @@
     justify-content: center;
     margin: 0 auto;
     width: 100%;
+
+    & .filter-item {
+      &:nth-child(1) {
+        display: none;
+        order: 25;
+      }
+    }
   }
 
+  & .employers-box {
+    & .filter-item {
+      &:nth-child(1) {
+        display: none;
+        order: 25;
+      }
 
-  & .filter-item {
-    &:nth-child(1) {
-      display: none;
-      order: 25;
-    }
-
-    &:nth-child(2) {
-      order: 4;
-    }
-    &:nth-child(3) {
-      order: 2;
-    }
-    &:nth-child(4) {
-      order: 1;
-    }
-    &:nth-child(5) {
-      order: 3;
-    }
-    &:nth-child(6) {
-      order: 5;
+      &:nth-child(2) {
+        order: 4;
+      }
+      &:nth-child(3) {
+        order: 2;
+      }
+      &:nth-child(4) {
+        order: 1;
+      }
+      &:nth-child(5) {
+        order: 3;
+      }
+      &:nth-child(6) {
+        order: 5;
+      }
     }
   }
 
